--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>TIC TAC TOE</h1>
+        <h2 class="turn">Player 1</h2>
+        <div class="board"></div>
+    </div>
 </body>
 </html>
