Update display controller

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="container">
         <h1>TIC TAC TOE</h1>
-        <h2 class="turn">Player 1</h2>
+        <h2 class="turn"></h2>
         <div class="board"></div>
+        <button class="startBtn">Start/Restart</button>
     </div>
 </body>
 </html>
