Update design ang added display winner

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>TIC TAC TOE</h1>
         <h2 class="turn"></h2>
         <div class="board"></div>
-        <button class="startBtn">Start/Restart</button>
+        <button class="startBtn">Start</button>
     </div>
 </body>
 </html>
